# phantom-vpn

./: .dockerignore  .env  .gitignore  AGENTS.md  ANALYZE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  PLAN.md  README.md  ROADMAP.md  VPN_Protocol_TZ.docx  VPN_UI.html  ghoststream-install.sh  speedtest_cloudflare_vless.csv  speedtest_opt-multiqueue-tun.csv  synthetic-petting-metcalfe.md  vdsina.json  vps_balancer.json  vps_nl.json
.cargo/: config.toml
.claude/: CHANGELOG.md  CLAUDE.md  MEMORY.md  feedback_auto_threads.md  feedback_build_local.md  feedback_multi_agents.md  feedback_profile_ux.md  feedback_splice_pipeline.md  feedback_tcp_auto_tune.md  macos_ui_migration.md  optimization_history.md  project_ghoststream_v018.md  project_ghoststream_v018_detection_vectors.md  project_play_market.md  project_sysctl_tuning.md  project_v018_shipped.md  project_v019_4_shipped.md  project_v019_priorities.md  reference_apk_build.md  reference_bottleneck_v0172.md  reference_detection_vectors_11_13.md  reference_multi_origin_design.md  reference_perf_baseline.md  reference_phone_mapping.md  reference_quic_status.md  reference_server_side_bench.md  reference_single_flow_ceiling.md  reference_tx_ceiling.md  reference_v019_perf_tests.md  reference_vpn_landscape_2026.md  research_dpi_evasion_2026.md  settings.json  tspu_quic_throttling.md  user_goals.md  v2_transport_plan.md  workflow_apk_deploy.md
.claude/agents/: ORCHESTRATION.md  architect.md  dev_android.md  dev_linux.md  dev_linux_gui.md  dev_macos_gui.md  dev_server.md  dev_windows_gui.md  secretary.md  validator.md
.codex/agents/: android.toml  architect.toml  lead_integrator.toml  linux.toml  protocol_core.toml  qa_perf.toml  release_ci.toml  server.toml
.cursor/: feedback_version_sync.md
.cursor/agents/: ORCHESTRATION.md  architect.md  dev_android.md  dev_macos.md  dev_server.md  secretary.md  validator.md
.github/workflows/: docker.yml  openwrt.yml  release.yml  windows-ci.yml
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/scripts/: REAL_E2E.md  run_real_e2e.sh
apps/ios/: .gitignore  README.md  project.yml
apps/linux-gui/: Cargo.toml  README.md
apps/linux-gui-helper/: Cargo.toml
apps/linux-gui/packaging/arch/: PKGBUILD
apps/linux-gui/packaging/polkit/: com.ghoststream.helper.policy
apps/linux-gui/packaging/scripts/: gen_icon.py
apps/linux-gui/packaging/systemd/: ghoststream.service
apps/linux-gui/src/: admin_api.rs  pkexec.rs  state.rs
apps/linux-gui/ui/: admin_screen.slint  logs_screen.slint  main.slint  mux.slint  rightrail.slint  settings_screen.slint  stage.slint
apps/linux/helper/: Cargo.toml
apps/linux/helper/src/: main.rs
apps/linux/helper/src/linux/: dns.rs  socket.rs  tun.rs  tunnel.rs
apps/macos/: README.md  project.yml
apps/openwrt/client/: Cargo.toml
apps/openwrt/client/src/: main.rs
apps/windows/gui/: Cargo.toml  app.manifest  build.rs
apps/windows/gui/design/: mockup.html
apps/windows/gui/src/: bridge.rs  controller.rs  main.rs  tray.rs  wintun_loader.rs
apps/windows/gui/ui/: main.slint  theme.slint
bot/: .dockerignore  Dockerfile  README.md  docker-compose.yml  install.sh  requirements.txt
bot/app/: __init__.py  admin_client.py  bot_logic.py  config.py  db.py  db_migrate.py  keyboards.py  main.py  models.py  payments.py  repositories.py  web.py  xui_client.py
config/: client.example.toml  server.example.toml
crates/client-android/: Cargo.toml
crates/client-android/src/: lib.rs
crates/client-apple/: Cargo.toml  build-xcframework.sh  cbindgen.toml
crates/client-apple/include/: PhantomCore.h
crates/client-apple/src/: lib.rs
crates/client-common/: Cargo.toml
crates/client-common/src/: h2_handshake.rs  h2_tunnel.rs  helpers.rs  lib.rs  quic_handshake.rs  quic_tunnel.rs  tls_handshake.rs  tls_tunnel.rs
crates/client-core-runtime/: Cargo.toml
crates/client-core-runtime/src/: cover.rs  lib.rs  log_bridge.rs  logsink.rs  supervise.rs  telemetry.rs  tun_io.rs
crates/client-ios/: Cargo.toml
crates/client-ios/src/: lib.rs
crates/client-linux/: Cargo.toml
crates/client-macos/: Cargo.toml
crates/client-openwrt/: Cargo.toml
crates/client-windows-core/: Cargo.toml
crates/client-windows-core/src/: lib.rs  profile.rs  routing.rs  tun_backend.rs
crates/client-windows-core/tests/: headless.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  crypto.rs  error.rs  h2_transport.rs  lib.rs  mtu.rs  quic.rs  routing.rs  shaper.rs  tls.rs  tun_simple.rs  tun_uring.rs  wire.rs
crates/gui-ipc/: Cargo.toml
crates/relay/: Cargo.toml
crates/relay/src/: main.rs
crates/server/: Cargo.toml
docker/: README.md  build-local.sh
docker/relay/: .env.example  Dockerfile  README.md  compose.example.yml  entrypoint.sh
docker/server/: .env.example  Dockerfile  README.md  compose.example.yml  entrypoint.sh
docs/: ios-native-design-audit.html  ios-privacy-policy.html  ios-privacy-policy.md  ios-ui-spec.md  privacy-policy.md  widget-mockup.html
docs/legal/: privacy.md
ghoststream_flutter/: README.md  analysis_options.yaml  pubspec.yaml
icons/: README.md  preview.html
other_docs/: PLAN_v2_transport.md  speedtest_cloudflare_phantomvpn.csv  speedtest_opt-v12.csv  speedtest_opt-v7-io-uring.csv
phantom-vpn/: .gitignore  ANALYZE_RESPONSE.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  speedtest_opt-v8-shaping.csv
phantom-vpn-ios/: README.md
phantom-vpn-macos/: Package.swift  build.sh
phantom-vpn/crates/client-linux/: Cargo.toml
phantom-vpn/crates/client-linux/src/: main.rs
phantom-vpn/crates/core/: Cargo.toml
phantom-vpn/crates/core/src/: config.rs  congestion.rs  crypto.rs  error.rs  lib.rs  mtu.rs  quic.rs  session.rs  tun_uring.rs  wire.rs
phantom-vpn/crates/server/: Cargo.toml
phantom-vpn/crates/server/src/: main.rs  quic_server.rs  sessions.rs  tun_iface.rs  worker.rs
scripts/: build-android-local.sh  build-ios-rust.sh  deploy.sh  keys.py
server/server/: Cargo.toml
server/server/src/: admin.rs  main.rs  mimicry.rs
tools/: ship-android.sh
(+482 files in other folders)
