[workspace]
members = [
    "crates/core",
    "crates/server",
    "crates/client-common",
    "crates/client-linux",
    "crates/client-android",
    "crates/client-apple",
    "crates/client-openwrt",
    "crates/relay",
    "crates/gui-ipc",
    "apps/linux-gui",
    "apps/linux-gui-helper",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"

# Size-optimized profile for OpenWrt/MIPS/ARM routers
[profile.release-openwrt]
inherits      = "release"
opt-level     = "z"
strip         = true
codegen-units = 1
