[workspace]
members = [
    # Shared libraries
    "crates/core",
    "crates/client-common",
    "crates/client-core-runtime",
    "crates/client-android",
    "crates/client-apple",
    "crates/gui-ipc",
    # Server
    "server/server",
    "server/relay",
    # Apps
    "apps/linux/cli",
    "apps/linux/gui",
    "apps/linux/helper",
    "apps/openwrt/client",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"

# Size-optimized profile for OpenWrt/MIPS/ARM routers
[profile.release-openwrt]
inherits      = "release"
opt-level     = "z"
strip         = true
codegen-units = 1
