[package]
name    = "phantom-client-android"
version = "0.1.0"
edition = "2021"

[lib]
name      = "phantom_android"
crate-type = ["cdylib"]

[dependencies]
phantom-core          = { path = "../core" }
phantom-client-common = { path = "../client-common" }
tokio                 = { version = "1", features = ["full"] }
anyhow                = "1"
libc                  = "0.2"
rustls                = { version = "0.23", features = ["ring", "std"] }
jni                   = { version = "0.21", features = ["invocation"] }
log                   = "0.4"
tokio-rustls          = "0.26"
socket2               = "0.5"
bytes                 = "1"
serde_json            = "1"
