[package]
name    = "phantom-client-android"
version = "0.1.0"
edition = "2021"

[lib]
name      = "phantom_android"
crate-type = ["cdylib"]

[dependencies]
phantom-core          = { path = "../core" }
phantom-client-common = { path = "../client-common" }
client-core-runtime   = { path = "../client-core-runtime" }
ghoststream-gui-ipc   = { path = "../gui-ipc" }
tokio                 = { version = "1", features = ["full"] }
anyhow                = "1"
libc                  = "0.2"
jni                   = { version = "0.21", features = ["invocation"] }
bytes                 = "1"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
