[package]
name    = "phantom-client-apple"
version = "0.1.0"
edition = "2021"

[lib]
name       = "phantom_client_apple"
crate-type = ["staticlib"]

[dependencies]
phantom-core          = { path = "../core" }
phantom-client-common = { path = "../client-common" }
tokio                 = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
tokio-rustls          = "0.26"
rustls                = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile        = "2"
bytes                 = "1"
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow                = "1"
once_cell             = "1"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
libc                  = "0.2"
parking_lot           = "0.12"
