[package]
name    = "phantom-client-apple"
version = "0.1.0"
edition = "2021"

[lib]
name       = "phantom_client_apple"
crate-type = ["staticlib"]

[dependencies]
phantom-core          = { path = "../core" }
phantom-client-common = { path = "../client-common" }
client-core-runtime   = { path = "../client-core-runtime" }
tokio                 = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
bytes                 = "1"
tracing               = "0.1"
anyhow                = "1"
once_cell             = "1"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
parking_lot           = "0.12"
