[package]
name    = "phantom-client-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "client_common"
path = "src/lib.rs"

[dependencies]
phantom-core       = { path = "../core", default-features = false }
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
serde              = { version = "1", features = ["derive"] }
toml               = "0.8"
base64             = "0.22"
hex                = "0.4"
rand               = "0.8"
clap               = { version = "4", features = ["derive"] }
bytes              = "1"
rustls             = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde_json         = "1"
tokio-rustls       = { version = "0.26", default-features = false, features = ["ring"] }
# v0.25.0: SO_KEEPALIVE на TCP сокете — мобильные NAT'ы выкидывают idle TCP
# entry за 60-180s. TLS-heartbeat ходит, но если NAT уже выпилен — пакет
# получает RST. socket2 0.6 (как в workspace lock) для TcpKeepalive API.
# Bug #8.
socket2            = { version = "0.6", features = ["all"] }
