[package]
name = "client-core-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
phantom-core        = { path = "../core" }
phantom-client-common = { path = "../client-common" }
ghoststream-gui-ipc = { path = "../gui-ipc" }
tokio               = { version = "1", features = ["full"] }
tokio-util          = { version = "0.7" }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
bytes               = "1"
anyhow              = "1"
once_cell           = "1"
parking_lot         = "0.12"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
rustls              = { version = "0.23", default-features = false, features = ["ring", "std"] }
