[package]
name = "phantom-client-ios"
version = "0.1.0"
edition = "2021"

[lib]
name = "phantom_ios"
crate-type = ["staticlib"]

[dependencies]
phantom-core = { path = "../core" }
phantom-client-common = { path = "../client-common" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
libc = "0.2"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring", "std"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
