[package]
name = "phantom-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand           = "0.8"
bytes          = "1"
sha2           = "0.10"
tracing        = "0.1"
thiserror      = "1"
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
toml           = "0.8"
base64         = "0.22"
libc           = "0.2"
tokio          = { version = "1", features = ["full"] }
quinn          = "0.11"
quinn-proto    = "0.11"
rustls         = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen          = "0.13"
rustls-pemfile = "2"
webpki-roots   = "0.26"
ipnet          = "2"

[features]
default = ["io-uring-tun"]
io-uring-tun = ["io-uring"]

[target.'cfg(target_os = "linux")'.dependencies]
io-uring       = { version = "0.7", optional = true }
