[package]
name = "phantom-server"
version = "0.1.0"
edition = "2021"
default-run = "phantom-server"

[[bin]]
name = "phantom-server"
path = "src/main.rs"

[[bin]]
name = "phantom-keygen"
path = "src/bin/phantom_keygen.rs"

[dependencies]
phantom-core    = { path = "../../crates/core" }
tokio           = { version = "1", features = ["full"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror       = "1"
anyhow          = "1"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"
libc            = "0.2"
dashmap         = "5"
lru             = "0.12"
base64          = "0.22"
bytes           = "1"
hex             = "0.4"
rand            = "0.8"
clap            = { version = "4", features = ["derive"] }
rustls          = { version = "0.23", features = ["ring", "std"] }
rcgen           = { version = "0.13", features = ["x509-parser"] }
time            = { version = "0.3", features = ["formatting"] }
rustls-pemfile  = "2"
sha2            = "0.10"
axum            = { version = "0.7", features = ["json"] }
tower           = { version = "0.4", features = ["util"] }
hyper           = { version = "1", features = ["http1", "server"] }
hyper-util      = { version = "0.1", features = ["tokio"] }
h2              = "0.4"
tokio-rustls    = { version = "0.26", features = ["ring"] }
http            = "1"
futures-util    = "0.3"
