[package]
name = "ghoststream-helper"
version = "0.1.0"
edition = "2021"
description = "Privileged helper for ghoststream-gui (owns TUN + tunnel + routes)"

[[bin]]
name = "ghoststream-helper"
path = "src/main.rs"

[dependencies]
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util", "signal"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes       = "1"
libc        = "0.2"
nix         = { version = "0.29", features = ["user", "fs"] }
rustls      = { version = "0.23", default-features = false, features = ["ring"] }

client_common       = { package = "phantom-client-common", path = "../../../crates/client-common" }
phantom_core        = { package = "phantom-core",           path = "../../../crates/core" }
ghoststream-gui-ipc = { path = "../../../crates/gui-ipc" }
client_core_runtime = { package = "client-core-runtime",    path = "../../../crates/client-core-runtime" }
