[package]
name    = "phantom-client-openwrt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghoststream"
path = "src/main.rs"

[dependencies]
phantom-core          = { path = "../../../crates/core", default-features = false }
phantom-client-common = { path = "../../../crates/client-common" }
tokio                 = { version = "1", features = ["full"] }
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter"] }
anyhow                = "1"
libc                  = "0.2"
rustls                = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde_json            = "1"
bytes                 = "1"

