[package]
name = "ghoststream-windows"
version = "0.1.0"
edition = "2021"
description = "GhostStream Windows desktop client (Slint UI, Phase 1 skeleton)"

[[bin]]
name = "ghoststream-windows"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
client-windows-core = { path = "../../../crates/client-windows-core" }
ghoststream-gui-ipc = { path = "../../../crates/gui-ipc" }
