[package]
name = "ghoststream-windows"
version = "0.1.0"
edition = "2021"
description = "GhostStream Windows desktop client (Slint UI)"
build = "build.rs"

[[bin]]
name = "ghoststream-windows"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
client-windows-core = { path = "../../../crates/client-windows-core" }
client-core-runtime = { path = "../../../crates/client-core-runtime" }
ghoststream-gui-ipc = { path = "../../../crates/gui-ipc" }
slint = { version = "1.8", default-features = false, features = ["std", "backend-winit", "renderer-femtovg", "compat-1-2"] }
tray-icon = "0.20"

[build-dependencies]
embed-resource = "2.5"
slint-build = "1.8"
