[package]
name    = "phantom-client-linux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phantom-client-linux"
path = "src/main.rs"

[dependencies]
phantom-core         = { path = "../core" }
phantom-client-common = { path = "../client-common" }
tokio                = { version = "1", features = ["full"] }
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
anyhow               = "1"
clap                 = { version = "4", features = ["derive"] }
libc                 = "0.2"
rand                 = "0.8"
hex                  = "0.4"
quinn                = "0.11"
rustls               = { version = "0.23", features = ["ring", "std"] }
serde_json           = "1"
