[package]
name = "phantom-server"
version = "0.1.0"
edition = "2021"
default-run = "phantom-server"

[[bin]]
name = "phantom-server"
path = "src/main.rs"

[[bin]]
name = "phantom-keygen"
path = "src/bin/phantom_keygen.rs"

[dependencies]
phantom-core    = { path = "../core" }
tokio           = { version = "1", features = ["full"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror       = "1"
anyhow          = "1"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"
libc            = "0.2"
dashmap         = "5"
base64          = "0.22"
hex             = "0.4"
rand            = "0.8"
clap            = { version = "4", features = ["derive"] }
quinn           = "0.11"
rustls          = { version = "0.23", features = ["ring", "std"] }
rcgen           = "0.13"
rustls-pemfile  = "2"
